--- a/configServer/configServer/src/main/resources/application.properties
+++ b/configServer/configServer/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 server.port: 8888
-spring.cloud.config.server.git.uri: https://github.com/AlettaCosima/project
+spring.cloud.config.server.git.uri: https://github.com/AlettaCosima/project.git
