--- a/configServer/configServer/src/main/resources/application.properties
+++ b/configServer/configServer/src/main/resources/application.properties
@@ -1,2 +1,8 @@
+spring.application.name=config-server
 server.port: 8888
-spring.cloud.config.server.git.uri: https://github.com/AlettaCosima/project.git
+
+
+
+spring.cloud.config.label=master
+spring.cloud.config.server.git.uri:https://github.com/AlettaCosima/project
+spring.cloud.config.server.git.search-paths=spring-cloud-config
