--- a/configServer/configServer/src/main/resources/application.properties
+++ b/configServer/configServer/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=config-server
-server.port: 8888
-
-
+server.port=8888
+spring.active.profiles=dev
 
 spring.cloud.config.label=master
-spring.cloud.config.server.git.uri:https://github.com/AlettaCosima/project
+spring.cloud.config.server.git.uri=https://github.com/AlettaCosima/project/
 spring.cloud.config.server.git.search-paths=spring-cloud-config
