--- a/configServer/configServer/src/main/resources/application.properties
+++ b/configServer/configServer/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=config-server
 server.port=8888
 spring.active.profiles=dev
 
+eureka.client.service-url.defaultZone=http://203.195.163.69:1110/eureka
+eureka.instance.prefer-ip-address=true
+
 spring.cloud.config.label=master
 spring.cloud.config.server.git.uri=https://github.com/AlettaCosima/project/
 spring.cloud.config.server.git.search-paths=spring-cloud-config
