--- a/echi/pom.xml
+++ b/echi/pom.xml
@@ -118,7 +118,10 @@
 		    <artifactId>pagehelper-spring-boot-starter</artifactId>
 		    <version>1.2.5</version>
 		</dependency>
-
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 		
 		
 	</dependencies>
