--- a/echi/src/main/resources/bootstrap.properties
+++ b/echi/src/main/resources/bootstrap.properties
@@ -1,4 +1,10 @@
 spring.cloud.config.name=config-client
 spring.cloud.config.profile=dev
-spring.cloud.config.uri=http://localhost:8888/
+#spring.cloud.config.uri=http://localhost:8888/
 spring.cloud.config.label=master
+
+eureka.instance.leaseRenewalIntervalInSeconds=10
+eureka.instance.prefer-ip-address=true
+eureka.client.registryFetchIntervalSeconds=5
+eureka.client.serviceUrl.defaultZone=${EUREKA_SERVICE_URL:http://203.195.163.69:1110}/eureka/
+
