--- a/echi/src/main/resources/application.yml
+++ b/echi/src/main/resources/application.yml
@@ -24,11 +24,11 @@ management:
   security:
     enabled: false
     
-#eureka:
-  #instance:
-    #leaseRenewalIntervalInSeconds: 10
-    #prefer-ip-address: true
-  #client:
-    #registryFetchIntervalSeconds: 5
-    #serviceUrl:
-      #defaultZone: ${EUREKA_SERVICE_URL:http://203.195.163.69:1110}/eureka/
+eureka:
+  instance:
+    leaseRenewalIntervalInSeconds: 10
+    prefer-ip-address: true
+  client:
+    registryFetchIntervalSeconds: 5
+    serviceUrl:
+      defaultZone: ${EUREKA_SERVICE_URL:http://203.195.163.69:1110}/eureka/
