--- a/echi/src/main/resources/bootstrap.properties
+++ b/echi/src/main/resources/bootstrap.properties
@@ -8,3 +8,8 @@ eureka.instance.prefer-ip-address=true
 eureka.client.registryFetchIntervalSeconds=5
 eureka.client.serviceUrl.defaultZone=${EUREKA_SERVICE_URL:http://203.195.163.69:1110}/eureka/
 
+spring.cloud.bus.trace.enabled=true
+spring.rabbitmq.host=203.195.163.69
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=chentao
+spring.rabbitmq.password=chentao
