--- a/echi/src/main/resources/application.yml
+++ b/echi/src/main/resources/application.yml
@@ -3,6 +3,19 @@ spring:
     name: application-client
   profiles:
     active: dev
+  cloud:
+    bus:
+     trace:
+      enabled: true
+    config:
+     name:config-client
+     profile:dev
+     label:master
+  rabbitmq:
+    host: 203.195.163.69
+    port: 5672
+    username: chentao
+    password: chentao
 security:  
   basic:  
     enabled: true    #启用SpringSecurity的安全配置项  
