--- a/configServer/configServer/src/main/resources/application.properties
+++ b/configServer/configServer/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=config-server
 server.port=8888
 spring.active.profiles=dev
 
-eureka.client.service-url.defaultZone=http://203.195.163.69:1110/eureka
-eureka.instance.prefer-ip-address=true
+eureka.client.serviceUrl.defaultZone=http://203.195.163.69:1110/eureka
+#eureka.instance.prefer-ip-address=true
 
 spring.cloud.config.label=master
 spring.cloud.config.server.git.uri=https://github.com/AlettaCosima/project/
