--- a/configServer/configServer/src/main/resources/application.properties
+++ b/configServer/configServer/src/main/resources/application.properties
@@ -9,8 +9,11 @@ spring.cloud.config.label=master
 spring.cloud.config.server.git.uri=https://github.com/AlettaCosima/project/
 spring.cloud.config.server.git.search-paths=spring-cloud-config
 
+management.security.enabled=false
+
 #spring.cloud.bus.trace.enabled=true
 spring.rabbitmq.host=203.195.163.69
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=chentao
 spring.rabbitmq.password=chentao
+
