--- a/echi/src/main/resources/bootstrap.properties
+++ b/echi/src/main/resources/bootstrap.properties
@@ -3,6 +3,10 @@ spring.cloud.config.profile=dev
 #spring.cloud.config.uri=http://localhost:8888/
 spring.cloud.config.label=master
 
+eureka.client.serviceUrl.defaultZone=http://203.195.163.69:1110/eureka
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config-server
+
 #eureka.instance.leaseRenewalIntervalInSeconds=10
 #eureka.instance.prefer-ip-address=true
 #eureka.client.registryFetchIntervalSeconds=5
