--- a/echi-server/src/main/resources/application.properties
+++ b/echi-server/src/main/resources/application.properties
@@ -3,5 +3,5 @@ server.address=localhost
 server.session.timeout=30
 server.context-path=/echi-server
 
-
+spring.application.name=echi-server
 eureka.client.serviceUrl.defaultZone=http://203.195.163.69:1110/eureka
